force-app/main/default/objects/Document_Checklist_Item__mdt/Document_Checklist_Item__mdt.object-meta.xml
<CustomObject>
    <description>Used by the documentChecklist LWC. First create a Document Checklist record, then configure checklist items here.</description>
    <label>Document Checklist Item</label>
    <pluralLabel>Document Checklist Items</pluralLabel>
</CustomObject>