force-app/main/default/objects/Document_Checklist_Item__mdt/fields/Document_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Document_Checklist__c</fullName>
    <inlineHelpText>Document Checklist this item relates to</inlineHelpText>
    <label>Document Checklist</label>
    <referenceTo>Document_Checklist__mdt</referenceTo>
    <relationshipLabel>Document Checklist Items</relationshipLabel>
    <relationshipName>Document_Checklist_Items</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>