force-app/main/default/objects/Document_Checklist_Item__mdt/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <inlineHelpText>Type that will be associated with uploaded document. This must match a picklist value on the Document Type field configured on the Document Checklist custom metadata record</inlineHelpText>
    <label>Document Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>